--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ debian/.debhelper/
 debian/debhelper-build-stamp
 debian/files
 debian/svnmentions.debhelper.log
+debian/svnmentions.*.debhelper
 debian/svnmentions.substvars
 debian/svnmentions/
 package/
